--- a/_config.yml
+++ b/_config.yml
@@ -93,13 +93,13 @@ defaults:
 # 7. Site settings
 encoding: utf-8 # Make sure the encoding is right
 lang: en-GB # Set the site language
-title: "Weichuan Wang" # Site name or title, also used in jekyll-seo-tag
+title: "Weichuan Wang's Personal Page" # Site name or title, also used in jekyll-seo-tag
 logo: "/assets/logos/logo.svg" # Site logo, also used in jekyll-seo-tag
 description: "Rather than starting from scratch, this boilerplate is designed to get the ball rolling immediately" # Site description and default description, also used in jekyll-seo-tag
-url: "https://alembic.darn.es" # Site url, also used in jekyll-seo-tag
-baseurl: ""
-repo: "https://github.com/daviddarnes/alembic"
-email: "me@daviddarnes.com"
+url: "" # Site url, also used in jekyll-seo-tag
+baseurl: "https://weichuanw.github.io/"
+repo: "https://github.com/weichuanW/weichuanW.github.io/"
+email: "weicwang2-c@my.cityu.edu.hk"
 # disqus: "alembic-1" # Blog post comments, uncomment the option and set the site ID from your Disqus account
 # date_format: "%-d %B %Y" # Blog post date formatting using placeholder formatting
 # google_analytics: ""
