--- a/_config.yml
+++ b/_config.yml
@@ -93,9 +93,9 @@ defaults:
 # 7. Site settings
 encoding: utf-8 # Make sure the encoding is right
 lang: en-GB # Set the site language
-title: "Weichuan Wang's Personal Page" # Site name or title, also used in jekyll-seo-tag
+title: "Weichuan Wang" # Site name or title, also used in jekyll-seo-tag
 logo: "/assets/logos/logo.svg" # Site logo, also used in jekyll-seo-tag
-description: "Personal Webpage for Weichuan Wang" # Site description and default description, also used in jekyll-seo-tag
+description: "Exploring The Translation With Machine" # Site description and default description, also used in jekyll-seo-tag
 url: "" # Site url, also used in jekyll-seo-tag
 baseurl: "https://weichuanw.github.io/"
 repo: "https://github.com/weichuanW/weichuanW.github.io/"
@@ -139,11 +139,11 @@ navigation_footer:
   url: weicwang2-c@my.cityu.edu.hk
 
 social_links: # Appears in sidebar. Set the urls then uncomment and comment out as desired
-  Twitter: https://twitter.com/DavidDarnes
-  LinkedIn: https://www.linkedin.com/in/daviddarnes
-  GitHub: https://github.com/daviddarnes
-  link: https://darn.es
-  RSS: /feed.xml
+  #Twitter: https://twitter.com/DavidDarnes
+  Google Scholar: https://scholar.google.com.hk/citations?hl=en&user=v89zqgQAAAAJ
+  GitHub: https://github.com/weichuanW
+  #link: https://darn.es
+  #RSS: /feed.xml
 
 sharing_links: # Appear at the bottom of single blog posts, add as desired. The value can be 'true' or the desired button colour
   Twitter: "#0d94e7"
