--- a/_config.yml
+++ b/_config.yml
@@ -123,16 +123,16 @@ favicons: # Favicons are also used in the manifest file. Syntax is 'size: path'
 navigation_header:
 - title: Home
   url: /
-- title: Elements
-  url: /elements/
+#- title: Elements
+  #url: /elements/
 - title: Blog
   url: /blog/
-- title: Categories
-  url: /categories/
-- title: Search
-  url: /search/
-- title: Fork Alembic
-  url: https://github.com/daviddarnes/alembic
+#- title: Categories
+  #url: /categories/
+#- title: Search
+  #url: /search/
+#- title: Fork Alembic
+  #url: https://github.com/daviddarnes/alembic
 
 navigation_footer:
 - title: Contact me
