--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ favicons: # Favicons are also used in the manifest file. Syntax is 'size: path'
 # 9. Site navigation
 navigation_header:
 - title: Home
-  url: /
+  url: index.md
 #- title: Elements
   #url: /elements/
 - title: Blog
