--- a/_config.yml
+++ b/_config.yml
@@ -135,7 +135,7 @@ navigation_header:
   #url: https://github.com/daviddarnes/alembic
 
 navigation_footer:
-- title: Contact me: weicwang2-c[at]my[dot]cityu[dot]edu[dot]hk
+#- title: 
   #url: weicwang2-c@my.cityu.edu.hk
 
 social_links: # Appears in sidebar. Set the urls then uncomment and comment out as desired
