--- a/_config.yml
+++ b/_config.yml
@@ -135,7 +135,7 @@ navigation_header:
   #url: https://github.com/daviddarnes/alembic
 
 navigation_footer:
-#- title: 
+- title: Contact me
   #url: weicwang2-c@my.cityu.edu.hk
 
 social_links: # Appears in sidebar. Set the urls then uncomment and comment out as desired
